# web-application

./: TIMELINE.md  pyvenv.cfg
esp32-device/: sdkconfig.defaults
esp32-device/components/blob_detect/: BLOB_DETECT.md  CMakeLists.txt  Kconfig  blob_detect.c  blob_detect.h
esp32-device/components/cnn_inference/: CMakeLists.txt  Kconfig  cnn_inference.cpp  cnn_inference.h  idf_component.yml
esp32-device/components/config_repo/: config_repo.c  config_repo.h
esp32-device/components/provisioning/: provisioning_service.c  provisioning_service.h
training_pipeline/: best_model.pth  export_espdl.py  lettercnn.espdl  lettercnn.info  lettercnn.json  lettercnn.onnx
ux/: index.html  package-lock.json  package.json  vite.config.js
ux/src/: App.jsx  appFetch.js  index.css  main.jsx
ux/src/pages/: PageWrapperComponent.jsx
ux/src/pages/dashboard/: CreateDeviceForm.jsx  DashboardPage.jsx
ux/src/pages/index/: IndexPage.jsx
ux/src/pages/login/: LoginForm.jsx  LoginPage.jsx  OtpLoginForm.jsx
webapi/: pom.xml
webapi/src/main/java/com/jden/espylah/webapi/: WebapiApplication.java
webapi/src/main/java/com/jden/espylah/webapi/app/: RunMode.java
webapi/src/main/java/com/jden/espylah/webapi/security/: DeviceAuthenticationFilter.java  SecurityConfig.java
webapi/src/main/resources/: application.properties
webapi/src/main/resources/demo/: h2-init-demo.sql
webapi/src/test/java/com/jden/espylah/webapi/: WebapiApplicationTests.java
webapi/src/test/resources/: application.properties  banner.txt  h2-init.sql
(+75 files in other folders)
